--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
     <string name="forecast_details">Forecast Details </string>
     <string name="Display_Units">Disply Units</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
